--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     
     <style>
         :root {
-            --primary-color: #0d6efd;
+            --primary-color: #3d84eeff;
             --secondary-color: #6c757d;
         }
         
